--- a/sprint2/index.html
+++ b/sprint2/index.html
@@ -7,7 +7,7 @@
     <meta name='description' content='Итоговое задание первого спринта'>
     <meta name="keywords" content="html, css">
     <meta name="author" content="Катя Иванова">
-    <link href="./blocks/content/content.css" rel="stylesheet">
+    <link href="./pages/index.css" rel="stylesheet">
     <title>Научиться учиться</title>
 </head>
 
@@ -17,7 +17,8 @@
         <header class="header">
             <div class="logo logo_place_header"></div>
             <h1 class="header__title">Научиться учиться</h1>
-            <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+            <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в
+                своей жизни?
                 <a href="#" class="header__link"> Узнать &rarr;</a></p>
             <div class="header__main-illustration"></div>
             <div class="header__square-pic rotation"></div>
@@ -27,10 +28,15 @@
                 <div class="two-columns">
                     <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
                     <div class="two-columns__main-text">
-                        <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального
+                        <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно
+                            изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные
+                            задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального
                             знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-                        <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-                        <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+                        <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться
+                            тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+                        <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к
+                            обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере
+                            обучения в Практикуме.</p>
                     </div>
                 </div>
             </section>
@@ -41,12 +47,14 @@
                     <li class="cards__item">
                         <img class="cards__image" src="./images/cards-attention.png" alt="книга в руках">
                         <h3 class="cards__title">Два вида внимания</h3>
-                        <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+                        <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и
+                            рассеянное мышление.</p>
                     </li>
                     <li class="cards__item">
                         <img class="cards__image" src="./images/cards-recall.png" alt="скульптура задумчивого юноши">
                         <h3 class="cards__title">Recall</h3>
-                        <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.
+                        <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции
+                            памяти.
                         </p>
                     </li>
                     <li class="cards__item">
@@ -58,12 +66,14 @@
                     <li class="cards__item">
                         <img class="cards__image" src="./images/cards-question.png" alt="одинокий человек в комнате">
                         <h3 class="cards__title">Вопросы</h3>
-                        <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+                        <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас
+                            действительно волнует.</p>
                     </li>
                     <li class="cards__item">
                         <img class="cards__image" src="./images/cards-competence.png" alt="стопка книг на руке">
                         <h3 class="cards__title">Иллюзия компетентности</h3>
-                        <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+                        <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только
+                            кажется, что вы владеете новой темой.</p>
                     </li>
                 </ul>
             </section>
@@ -71,16 +81,24 @@
                 <h2 class="section-title">Видео нa TED</h2>
                 <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
                 <div class="video__iframes">
-                    <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU?controls=0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY?controls=0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU?controls=0"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY?controls=0"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
                 </div>
             </section>
             <section class="oakley ">
                 <div class="two-columns ">
                     <h2 class="two-columns__brief ">История Барбары Оакли.</h2>
                     <div class="two-columns__main-text ">
-                        <p class="two-columns__paragraph ">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для
-                            продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого
+                        <p class="two-columns__paragraph ">С детства Барбаре не давалась математика. Она считала себя
+                            законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык,
+                            чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для
+                            продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к
+                            точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо
+                            глубже, чем у тех, кому всё ясно с первого
                             взгляда.
                         </p>
                     </div>
@@ -94,7 +112,7 @@
             </section>
 
             <section class="digits ">
-                <h3 class="section-title ">Цифры и факты</h3>
+                <h2 class="section-title ">Цифры и факты</h2>
                 <p class="section-subtitle ">Про учёбу и мозг</p>
                 <ul class="table ">
                     <li class="table__cell ">
@@ -117,7 +135,8 @@
                     </li>
                     <li class="table__cell ">
                         <h3 class="table__heading ">420 миллионов</h3>
-                        <p class="table__text ">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
+                        <p class="table__text ">Число взрослых людей моложе 25 лет, не имеющих образования для
+                            трудоустройства
                         </p>
                         <p class="table__text "> Всемирный банк, 2017</p>
                     </li>
@@ -139,7 +158,9 @@
                 <div class="khan__container ">
                     <p class="khan__author ">Салман Хан</p>
                     <h2 class="khan__title ">Весь мир — школа</h2>
-                    <blockquote class="khan__quote ">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят
+                    <blockquote class="khan__quote ">Страсть и новаторство Сала Хана меняют процесс обучения миллионов
+                        студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается
+                        образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят
                         успех в школе, карьере и жизни.
                     </blockquote>
                     <p class="khan__quote-author ">Джордж Лукас</p>
@@ -194,7 +215,8 @@
                     </li>
                     <li class="table__cell_theme_dark table__cell ">
                         <h4 class="table__heading_theme_dark table__heading ">9</h4>
-                        <p class="table__text_theme_dark table__text ">Занимайтесь по расписанию, короткими интенсивными интервалами.
+                        <p class="table__text_theme_dark table__text ">Занимайтесь по расписанию, короткими интенсивными
+                            интервалами.
                         </p>
                     </li>
                     <li class="table__cell_theme_dark table__cell ">
@@ -207,21 +229,26 @@
                 <h2 class="section-title ">Полезные ресурсы</h2>
                 <p class="section-subtitle ">Больше материалов о техниках и лайфхаках обучения
                 </p>
-                <ul class="resources__logo-zone ">
-                    <li class="resources__logo ">
-                        <a href="#"> <img src="./images/resources-arzamas.svg " alt="логотип Арзамас "></a>
-                    </li>
-                    <li class="resources__logo ">
-                        <a href="#"> <img src="./images/resources-n1.svg " alt="логотип N+1 "></a>
-                    </li>
-                    <li class="resources__logo ">
-
+                <ul class="resources__logo-zone">
+                    <li>
                         <a href="#">
-                            <img src="./images/resources-strelka.svg " alt="логотип Strelka">
+                            <img class="resources__logo" src="./images/resources-arzamas.svg " alt="логотип Арзамас ">
                         </a>
                     </li>
-                    <li class="resources__logo ">
-                        <a href="#"> <img src="./images/resources-polka.svg " alt="логотип Полка "></a>
+                    <li>
+                        <a href="#">
+                            <img class="resources__logo" src="./images/resources-n1.svg " alt="логотип N+1 ">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img class="resources__logo" src="./images/resources-strelka.svg " alt="логотип Strelka">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img class="resources__logo" src="./images/resources-polka.svg " alt="логотип Полка ">
+                        </a>
                     </li>
                 </ul>
             </section>
@@ -254,15 +281,18 @@
                     <ul class="footer__column-links ">
                         <li>
                             <a href="# " class="footer__column-link ">
-                                <img class="footer__social-icon " src="./images/facebook_color_white.svg " alt="иконка Фейсбука ">Facebook</a>
+                                <img class="footer__social-icon " src="./images/facebook_color_white.svg "
+                                    alt="иконка Фейсбука ">Facebook</a>
                         </li>
                         <li>
                             <a href="# " class="footer__column-link">
-                                <img class="footer__social-icon " src="./images/vk_color_white.svg " alt="иконка вконтакте ">ВКонтакте</a>
+                                <img class="footer__social-icon " src="./images/vk_color_white.svg "
+                                    alt="иконка вконтакте ">ВКонтакте</a>
                         </li>
                         <li>
                             <a href="# " class="footer__column-link">
-                                <img class="footer__social-icon " src="./images/instagram_color_white.svg " alt="иконка инстаграм ">Instagram</a>
+                                <img class="footer__social-icon " src="./images/instagram_color_white.svg "
+                                    alt="иконка инстаграм ">Instagram</a>
                         </li>
                     </ul>
                 </nav>
