--- a/russian-travel/index.html
+++ b/russian-travel/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -59,7 +59,7 @@
                 <h1 class="lead__title ">Путешествия по России</h1>
                 <p class="lead__subtitle ">Настоящая страна не в выпусках новостей, а здесь.</p>
 
-                <img class="lead__image " src="images/kalegin-michail-179870-unsplash@2x.png ">
+                <img class="lead__image " src="images/kalegin-michail-179870-unsplash@2x.png " alt="спящий человек в плацкарте">
                 <p class="lead__caption ">ваша полка — верхняя</p>
             </section>
             <section class="intro ">
@@ -76,30 +76,30 @@
                 </p>
             </section>
             <section class="photo-grid ">
-                <img class="photo-grid__item_1 photo-grid__item " src="./images/photo-grid-train.jpg ">
-                <img class="photo-grid__item_2 photo-grid__item " src="./images/photo-grid-atharva-tulsi.jpg ">
-                <img class="photo-grid__item_3 photo-grid__item " src="./images/photo-grid-tuman.jpg ">
-                <img class="photo-grid__item_4 photo-grid__item " src="./images/photo-grid-sochi.jpg ">
-                <img class="photo-grid__item_5 photo-grid__item " src="./images/photo-grid-arisa.jpg ">
-                <img class="photo-grid__item_6 photo-grid__item " src="./images/photo-grid-baikal.jpg ">
-                <img class="photo-grid__item_7 photo-grid__item " src="./images/photo-grid-elbrus.jpg ">
-                <img class="photo-grid__item_8 photo-grid__item " src="./images/photo-grid-kondratiev.jpg ">
-                <img class="photo-grid__item_9 photo-grid__item " src="./images/photo-grid-kamchatka-1.jpg ">
-                <img class="photo-grid__item_10 photo-grid__item " src="./images/photo-grid-kamchatka-2.jpg ">
-                <img class="photo-grid__item_11 photo-grid__item " src="./images/photo-grid-baikal-2.jpg ">
-                <img class="photo-grid__item_12 photo-grid__item " src="./images/photo-grid-ergaki.jpg ">
+                <img class="photo-grid__item_1 photo-grid__item " src="./images/photo-grid-train.jpg " alt="окно поезда">
+                <img class="photo-grid__item_2 photo-grid__item " src="./images/photo-grid-atharva-tulsi.jpg" alt="горы">
+                <img class="photo-grid__item_3 photo-grid__item " src="./images/photo-grid-tuman.jpg " alt="собака на стоге сена">
+                <img class="photo-grid__item_4 photo-grid__item " src="./images/photo-grid-sochi.jpg " alt="лес в тумане">
+                <img class="photo-grid__item_5 photo-grid__item " src="./images/photo-grid-arisa.jpg " alt="колесо машины на льду">
+                <img class="photo-grid__item_6 photo-grid__item " src="./images/photo-grid-baikal.jpg " alt="берег и горы на фоне">
+                <img class="photo-grid__item_7 photo-grid__item " src="./images/photo-grid-elbrus.jpg " alt="горы">
+                <img class="photo-grid__item_8 photo-grid__item " src="./images/photo-grid-kondratiev.jpg " alt="знак пешеходный переход">
+                <img class="photo-grid__item_9 photo-grid__item " src="./images/photo-grid-kamchatka-1.jpg " alt="горы">
+                <img class="photo-grid__item_10 photo-grid__item " src="./images/photo-grid-kamchatka-2.jpg " alt="горы">
+                <img class="photo-grid__item_11 photo-grid__item " src="./images/photo-grid-baikal-2.jpg " alt="горы">
+                <img class="photo-grid__item_12 photo-grid__item " src="./images/photo-grid-ergaki.jpg " alt="горы">
 
             </section>
             <section class="places ">
                 <div class="place ">
-                    <h2 class="place__title title ">Куршская коса</h2>
+                    <h2 class="place__title title">Куршская коса</h2>
                     <p class="place__url-heading ">URL</p>
                     <a class="place__website link " href="park-kosa.ru ">park-kosa.ru</a>
                     <p class="place__paragraph subtitle ">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.
                         <br>
                         <br>На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера
                         здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
-                    <img class="place__image " src="images/place-kosa.jpg ">
+                    <img class="place__image " src="images/place-kosa.jpg " alt="фото побережья Куршской косы">
                 </div>
                 <div class="place ">
                     <h2 class="place__title title ">Кольский</h2>
@@ -111,7 +111,7 @@
                         Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.<br>
                         <br> Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей
                         земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
-                    <img class="place__image " src="./images/place-kolsky.jpg ">
+                    <img class="place__image " src="./images/place-kolsky.jpg " alt="горы">
                 </div>
                 <div class="place ">
                     <h2 class="place__title title ">Алтай</h2>
@@ -121,7 +121,7 @@
                         здешних мест — горным воздухом.<br>
                         <br> Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы
                         — тоже обитатели Алтайского края.</p>
-                    <img class="place__image " src="./images/place-altai.jpg ">
+                    <img class="place__image " src="./images/place-altai.jpg " alt="ноутбук на фоне леса">
                 </div>
                 <div class="place ">
                     <h2 class="place__title title ">Зимний Байкал</h2>
@@ -132,7 +132,7 @@
                     <p class="place__paragraph subtitle ">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.<br>
                         <br> Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019
                         года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
-                    <img class="place__image " src="./images/place-winter-baikal.jpg ">
+                    <img class="place__image " src="./images/place-winter-baikal.jpg " alt="толща льда">
                 </div>
                 <div class="place ">
                     <h2 class="place__title title ">Карелия</h2>
@@ -143,7 +143,7 @@
                     <p class="place__paragraph subtitle ">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали
                         топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
                         в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
-                    <img class="place__image " src="./images/place-karelia.jpg ">
+                    <img class="place__image " src="./images/place-karelia.jpg " alt="река в лесу">
                 </div>
             </section>
             <section class="cover ">
