--- a/russian-travel/index.html
+++ b/russian-travel/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="page">
         <header class="header">
-            <img class="header__logo" src="images/__logo.svg">
+            <img class="header__logo" src="images/__logo.svg" alt="Российская федерация">
 
 
             <a class="header__lang-link header__lang-link_selected" href="# ">Ru</a>
@@ -84,7 +84,7 @@
                         <p class="place__paragraph"> Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей
                             земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
                     </div>
-                    <img class="place__image " src="./images/place-kolsky.jpg" alt="горы">
+                    <img class="place__image" src="./images/place-kolsky.jpg" alt="горы">
                 </div>
                 <div class="place">
                     <h2 class="place__title title">Алтай</h2>
@@ -96,60 +96,60 @@
                         <p class="place__paragraph"> Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже
                             обитатели Алтайского края.</p>
                     </div>
-                    <img class="place__image " src="./images/place-altai.jpg " alt="ноутбук на фоне леса ">
+                    <img class="place__image" src="./images/place-altai.jpg" alt="ноутбук на фоне леса">
                 </div>
-                <div class="place ">
-                    <h2 class="place__title title ">Зимний Байкал</h2>
+                <div class="place">
+                    <h2 class="place__title title">Зимний Байкал</h2>
 
-                    <p class="place__url-heading ">URL</p>
-                    <a class="place__website link " href="https://vk.com/baikalmile ">https://vk.com/baikalmile</a>
+                    <p class="place__url-heading">URL</p>
+                    <a class="place__website link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
                     <div class="place__paragraph">
                         <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
                         <p class="place__paragraph"> Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года
                             на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
                     </div>
-                    <img class="place__image " src="./images/place-winter-baikal.jpg " alt="толща льда ">
+                    <img class="place__image" src="./images/place-winter-baikal.jpg" alt="толща льда">
                 </div>
-                <div class="place ">
-                    <h2 class="place__title title ">Карелия</h2>
+                <div class="place">
+                    <h2 class="place__title title">Карелия</h2>
 
-                    <p class="place__url-heading ">URL</p>
-                    <a class="place__website link " href="http://vodlozero.ru/ ">http://vodlozero.ru/</a>
+                    <p class="place__url-heading">URL</p>
+                    <a class="place__website link" href="http://vodlozero.ru/">http://vodlozero.ru/</a>
                     <div class="place__paragraph">
                         <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не
                             знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках
                             деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
                     </div>
-                    <img class="place__image " src="./images/place-karelia.jpg " alt="река в лесу ">
+                    <img class="place__image" src="./images/place-karelia.jpg " alt="река в лесу">
                 </div>
             </section>
-            <section class="cover ">
-                <a class="cover__overlay " href="https://stampsy.com/na-elektrichkakh-do-baikala ">
-                    <h2 class="cover__title title ">До Байкала «на собакаx»</h2>
-                    <p class="cover__subtitle subtitle ">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
+            <section class="cover">
+                <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+                    <h2 class="cover__title title">До Байкала «на собакаx»</h2>
+                    <p class="cover__subtitle subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
                 </a>
             </section>
         </main>
-        <footer class="footer ">
-
-            <ul>
+        <footer class="footer">
+            <ul class="footer__links">
                 <li>
-                    <a href="https://yandex.ru/maps " class="footer__link link ">Карты</a>
+                    <a href=" https://yandex.ru/maps" class="link footer__link">Карты</a>
                 </li>
                 <li>
-                    <a href="https://yandex.ru/pogoda " class="footer__link link ">Погода</a>
+                    <a href="https://yandex.ru/pogoda" class="link footer__link">Погода</a>
                 </li>
                 <li>
-                    <a href="https://rasp.yandex.ru " class="footer__link link ">Расписание</a>
+                    <a href="https://rasp.yandex.ru" class="link footer__link">Расписание</a>
                 </li>
                 <li>
-                    <a href="https://calendar.yandex.ru " class="footer__link link ">Календарь</a>
+                    <a href="https://calendar.yandex.ru" class="link footer__link">Календарь</a>
                 </li>
                 <li>
-                    <a href="https://travel.yandex.ru " class="footer__link link ">Путешествия</a>
+                    <a href="https://travel.yandex.ru" class="link footer__link">Путешествия</a>
                 </li>
             </ul>
-            <p class="footer__coopyright ">© 2020. Катя Иванова</p>
+            <p class="footer__coopyright">© 2020. Катя Иванова</p>
+
         </footer>
     </div>
 
