--- a/russian-travel/index.html
+++ b/russian-travel/index.html
@@ -11,7 +11,7 @@
     <title>Russia travel</title>
 </head>
 
-<body>
+<body class="body">
     <div class="page">
         <header class="header">
             <img class="header__logo" src="images/__logo.svg" alt="Российская Федерация">
@@ -36,11 +36,11 @@
                     и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила
                     их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
                 <ul class="intro__list">
-                    <li><span class="intro__list_span">Часовых поясов</span> 11</li>
-                    <li><span class="intro__list_span">Объектов природного наследия ЮНЕСКО</span> 12</li>
-                    <li><span class="intro__list_span">Объектов культурного наследия ЮНЕСКО</span> 16</li>
-                    <li><span class="intro__list_span">Природных заповедников</span> 105</li>
-                    <li><span class="intro__list_span">Аэропортов</span> 241</li>
+                    <li><span class="span">Часовых поясов</span> 11</li>
+                    <li><span class="span">Объектов природного наследия ЮНЕСКО</span> 12</li>
+                    <li><span class="span">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+                    <li><span class="span">Природных заповедников</span> 105</li>
+                    <li><span class="span">Аэропортов</span> 241</li>
                 </ul>
             </section>
             <section class="photo-grid">
@@ -63,7 +63,7 @@
                     <h2 class="place__title title">Куршская коса</h2>
                     <p class="place__url-heading">URL</p>
                     <a class="place__website link" href="park-kosa.ru">park-kosa.ru</a>
-                    <div class="place__paragraph">
+                    <div class="place__description">
                         <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.
                         </p>
                         <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних
@@ -78,7 +78,7 @@
                     <p class="place__url-heading">URL</p>
                     <a class="place__website link" href=" https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National
                         Geographic</a>
-                    <div class="place__paragraph">
+                    <div class="place__description">
                         <p class="place__paragraph">
                             Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
                         <p class="place__paragraph"> Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей
@@ -90,7 +90,7 @@
                     <h2 class="place__title title">Алтай</h2>
                     <p class="place__url-heading">URL</p>
                     <a class="place__website link" href=" https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
-                    <div class="place__paragraph">
+                    <div class="place__description">
                         <p class="place__paragraph">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым
                             чудом здешних мест — горным воздухом.</p>
                         <p class="place__paragraph"> Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже
@@ -103,7 +103,7 @@
 
                     <p class="place__url-heading">URL</p>
                     <a class="place__website link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
-                    <div class="place__paragraph">
+                    <div class="place__description">
                         <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
                         <p class="place__paragraph"> Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года
                             на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
@@ -115,7 +115,7 @@
 
                     <p class="place__url-heading">URL</p>
                     <a class="place__website link" href="http://vodlozero.ru/">http://vodlozero.ru/</a>
-                    <div class="place__paragraph">
+                    <div class="place__description">
                         <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не
                             знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках
                             деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
@@ -126,7 +126,7 @@
             <section class="cover">
                 <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala">
                     <h2 class="cover__title title">До Байкала «на собакаx»</h2>
-                    <p class="cover__subtitle subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
+                    <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
                 </a>
             </section>
         </main>
